--- a/FlappyBird.plist
+++ b/FlappyBird.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://raw.githubusercontent.com/government2/WebstoreiOS6/main/Flappy_Bird.ipa</string>
+					<string>https://github.com/government2/WebstoreiOS6/raw/refs/heads/main/Flappy_Bird.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
